--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,8 +5,12 @@
 <title>Embedded Style Sheet</title>
 <style type="text/css">
   
-  h1, h2 {
-  text-align: center;
+  h1 {
+    text-align: center;
+  }
+
+  h2 {
+    text-align: center;
   }
   
   form {
@@ -33,4 +37,4 @@
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
-}
+  }
