--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,10 @@
 <title>Embedded Style Sheet</title>
 <style type="text/css">
   
+  html {
+    height: 100%;
+  }
+
   form {
     display: block;
     border: 1px solid #000;
