--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,11 +15,12 @@
   }
   
   table {
+    text-align: center;
     display: block;
     border: 1px solid #000;
     width: 50%;
     padding: 1em;
-    position: absolute;
+    position: relative;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
