--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,5 +18,10 @@
     text-align: center;
     display: block;
     border: 1px solid #000;
-    width: 50%;
+    width: auto;
   }
+
+  td, th {
+    border: 1px solid #dddddd;
+  }
+
