--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,7 @@
   
   table {
     text-align: center;
-    display: block;
+    display: inline-block;
     border: 1px solid #000;
     width: auto;
   }
